@@ -116,8 +116,8 @@ Send bugs and suggestions to <users@texi2html.cvshome.org>
 <tr><td></td><td valign="top"><a href="xemacs_23.html#IDX828"><code>kill-word</code></a></td><td valign="top"><a href="xemacs_23.html#SEC206">20.2 Words</a></td></tr>
 <tr><td colspan="3"> <hr></td></tr>
 <tr><th><a name="INDEX4_L">L</a></th><td></td><td></td></tr>
-<tr><td></td><td valign="top"><a href="xemacs_23.html#SEC199"><code>latex-mode</code></a></td><td valign="top"><a href="xemacs_23.html#SEC199">20.1.2 TeX Mode</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_23.html#SEC199"><code>LaTeX-mode</code></a></td><td valign="top"><a href="xemacs_23.html#SEC199">20.1.2 TeX Mode</a></td></tr>
+<tr><td></td><td valign="top"><a href="xemacs_23.html#SEC199"><code>latex-mode</code></a></td><td valign="top"><a href="xemacs_23.html#SEC199">20.1.2 TeX Mode</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_24.html#IDX962"><code>lisp-complete-symbol</code></a></td><td valign="top"><a href="xemacs_24.html#SEC229">21.8 Completion for Lisp Symbols</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_24.html#IDX929"><code>lisp-indent-line</code></a></td><td valign="top"><a href="xemacs_24.html#SEC220">21.4.1 Basic Program Indentation Commands</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_25.html#IDX1052"><code>lisp-interaction-mode</code></a></td><td valign="top"><a href="xemacs_25.html#SEC260">22.6 Lisp Interaction Buffers</a></td></tr>
