@@ -161,8 +161,8 @@ Send bugs and suggestions to <users@texi2html.cvshome.org>
 <tr><td></td><td valign="top"><a href="xemacs_15.html#IDX477">`<samp>\B</samp>' in regexp</a></td><td valign="top"><a href="xemacs_15.html#SEC121">12.5 Syntax of Regular Expressions</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_15.html#IDX471">`<samp>\s</samp>' in regexp</a></td><td valign="top"><a href="xemacs_15.html#SEC121">12.5 Syntax of Regular Expressions</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_15.html#IDX472">`<samp>\S</samp>' in regexp</a></td><td valign="top"><a href="xemacs_15.html#SEC121">12.5 Syntax of Regular Expressions</a></td></tr>
-<tr><td></td><td valign="top"><a href="xemacs_15.html#IDX470">`<samp>\W</samp>' in regexp</a></td><td valign="top"><a href="xemacs_15.html#SEC121">12.5 Syntax of Regular Expressions</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_15.html#IDX469">`<samp>\w</samp>' in regexp</a></td><td valign="top"><a href="xemacs_15.html#SEC121">12.5 Syntax of Regular Expressions</a></td></tr>
+<tr><td></td><td valign="top"><a href="xemacs_15.html#IDX470">`<samp>\W</samp>' in regexp</a></td><td valign="top"><a href="xemacs_15.html#SEC121">12.5 Syntax of Regular Expressions</a></td></tr>
 <tr><td></td><td valign="top"><a href="xemacs_15.html#IDX453">`<samp>\{n,m\} </samp>'in regexp</a></td><td valign="top"><a href="xemacs_15.html#SEC121">12.5 Syntax of Regular Expressions</a></td></tr>
 <tr><td colspan="3"> <hr></td></tr>
 <tr><th><a name="SEC416_]">]</a></th><td></td><td></td></tr>
